apps/base/sonarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: sonarr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`sonarr-new.cruznet.io`)
    kind: Rule
    services:
    - name: sonarr
      kind: Service
      port: 8989
  tls:
    secretName: sonarr-cert
